--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -5,7 +5,7 @@
     android:layout_height="176dp"
     android:gravity="top"
     android:padding="16dp"
-    android:background="@color/toolbarColor"
+    android:background="#00695C"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <ImageView
